--- a/index.html
+++ b/index.html
@@ -1599,6 +1599,24 @@
       sheetCtx.lineWidth = 2;
       sheetCtx.setLineDash([10, 10]);
       sheetCtx.strokeRect(roiX_disp, roiY_disp, roiW_disp, roiH_disp);
+
+// ---- add faint red dashed guide line through ROI (vertical / Y-axis) ----
+sheetCtx.save();
+sheetCtx.strokeStyle = "rgba(239, 68, 68, 0.35)"; // red, faint
+sheetCtx.lineWidth = 2;
+sheetCtx.setLineDash([8, 10]); // dash pattern
+
+const midX = roiX_disp + roiW_disp / 2;
+
+sheetCtx.beginPath();
+sheetCtx.moveTo(midX, roiY_disp);
+sheetCtx.lineTo(midX, roiY_disp + roiH_disp);
+sheetCtx.stroke();
+
+sheetCtx.restore();
+
+
+
       sheetCtx.restore();
 
       // Get Image Data
