--- a/gluegap.html
+++ b/gluegap.html
@@ -1155,7 +1155,7 @@
           </div>
         </div>
 
-      
+       
       </div>
     </div>
   </div>
@@ -1207,6 +1207,10 @@
     let sheetCapStep = 1;
     let frontGapCapture = [];
     let tailGapCapture = [];
+    // Remember last Order No (optional)
+    let lastOrderNo = "";
+    try { lastOrderNo = localStorage.getItem("gluegap_last_orderNo") || ""; } catch(e) { lastOrderNo = ""; }
+
     // ==============================
     // ✅ SHEET CAPTURE STEP INDICATOR
     // ==============================
@@ -2425,7 +2429,13 @@ sheetCtx.restore();
 
       // freeze live view while reviewing summary
       sheetFrozen = true;
-// ensure Save button is visible whenever modal opens
+
+      // restore order number if user chose to reuse last time
+      const orderInp = document.getElementById("gg-order-input");
+      if (orderInp && (!orderInp.value || !orderInp.value.trim()) && lastOrderNo) {
+        orderInp.value = lastOrderNo;
+      }
+      // ensure Save button is visible whenever modal opens
       const saveBtnEl = document.getElementById("gg-btn-save");
       if (saveBtnEl) saveBtnEl.style.display = "";
 
@@ -2465,10 +2475,6 @@ sheetCtx.restore();
       frontGapCapture = [];
       tailGapCapture = [];
       closeGapSummaryModal();
-
-      // Clear Order input every time we start a new capture process
-      const orderInp = document.getElementById("gg-order-input");
-      if (orderInp) orderInp.value = "";
 
       const btn = document.getElementById("btn-sheet-cap");
       if (btn) {
@@ -3022,6 +3028,16 @@ sheetCtx.restore();
             // hide Save to force retake via Cancel
             saveBtn.style.display = "none";
             return;
+          }
+
+          // Requirement #3: Ask to reuse Order number for next inspection
+          const reuse = confirm(`ต้องการใช้เลข Order เดิม (${orderNo}) สำหรับการตรวจสอบครั้งถัดไปหรือไม่?`);
+          if (reuse) {
+            lastOrderNo = orderNo;
+            try { localStorage.setItem("gluegap_last_orderNo", orderNo); } catch (e) {}
+          } else {
+            lastOrderNo = "";
+            try { localStorage.removeItem("gluegap_last_orderNo"); } catch (e) {}
           }
 
           const payload = {
